--- a/src/components/Navbar/NavBar.css
+++ b/src/components/Navbar/NavBar.css
@@ -21,6 +21,9 @@
 .navbar ul li a.active {
   color: #ddb456;
 }
+.navbar ul li a:hover {
+  color: hsla(0, 0%, 60%, 0.8);
+}
 .navItem1,
 .navItem3 {
   display: flex;
@@ -35,7 +38,7 @@
 
 .navItem2 {
   font-weight: 500;
-  font-size: 20px;
+  font-size: 22px;
 }
 .navItem3 li:first-child {
   margin-right: 14px;
